--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,12 @@ dependencies:
     sdk: flutter
   http: 0.12.2
   english_words: ^3.1.5
-  flutter_html: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.0
+  chewie_audio: ^1.1.1
+  flutter_html: ^1.1.0
 
 dev_dependencies:
   flutter_test:
