--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="kenya_today_news"
+        android:label="Kenya Tooday News"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
