--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   chewie_audio: ^1.1.1
   flutter_html: ^1.1.0
+  html: ^0.14.0+4
 
 dev_dependencies:
   flutter_test:
